src/usercenter/k8s/user-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-db
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: user-db
