src/usercenter/k8s/user-session.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-session
  labels:
    app: user-session
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: user-session
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-session
  labels:
    app: user-session
spec:
  serviceName: user-session
  replicas: 1
  selector:
    matchLabels:
      app: user-session
  template:
    metadata:
      labels:
        app: user-session
    spec:
      containers:
        - name: user-session
          image: redis:6.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 0.5
              memory: 200Mi
            limits:
              cpu: 1
              memory: 500Mi
          ports:
            - containerPort: 6379
